--- a/css/experiencecalculator.css
+++ b/css/experiencecalculator.css
@@ -6,8 +6,8 @@ body{
 hr{
     border: 2px solid #333;
 }
-input,
-textarea{
+input{
     background: #000;
     color: #aaa;
+    text-align: center;
 }
